...
            android:hint="@string/regex_test_text_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <TextView
            android:id="@+id/regex_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textIsSelectable="true"
            android:paddingTop="8dp"
            android:paddingBottom="12dp"
...
